Changed CSS and reformatted layout of elements

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,12 @@
 .weather-icon {
     width: 50px; 
 }
+
+#pastSearch li {
+    list-style-type: none; /* Removes bullet points */
+    margin: 10px 0; 
+}
+
+#pastSearch button {
+    width: 50%; 
+}
